--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,31 @@ svg {
   gap: 20px;
 }
 
+.carousel-body {
+  box-shadow: 0px 12px 53px -3px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+}
+
+.carousel-img {
+  position: relative;
+}
+
+.carousel-img img {
+  height: 100%;
+}
+
+.status {
+  width: 100%;
+  background: #9b332fe1;
+  padding: 0.3rem;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+}
+
 .carousel-desc {
-  padding-top: 0.5rem;
+  padding: 0.5rem;
 }
 
 .carousel-desc p {
@@ -100,6 +123,7 @@ svg {
 
 .advert-main-section {
   padding: 5rem 0;
+  background: #f6f6f6;
 }
 
 .ads-container {
