--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,10 @@ svg {
   padding: 0.5rem;
 }
 
+.carousel-desc h4 {
+  margin-bottom: 0.6rem;
+}
+
 .carousel-desc p {
   display: flex;
   align-items: center;
@@ -166,6 +170,10 @@ svg {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+}
+
+.business-process-body h3 {
+  margin-bottom: 0.5rem;
 }
 
 .icon-box {
