--- a/css/style.css
+++ b/css/style.css
@@ -81,17 +81,27 @@ svg {
 
 .carousel-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% - (1.25rem * 3)) / 4);
   gap: 20px;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 
 .carousel-body {
+  position: relative;
+  scroll-snap-align: start;
   box-shadow: 0px 12px 53px -3px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
 }
 
 .carousel-img {
   position: relative;
+  margin-bottom: 1rem;
+  overflow: hidden;
+  border-radius: 5px 5px 0 0;
 }
 
 .carousel-img img {
@@ -119,6 +129,29 @@ svg {
 .carousel-desc p {
   display: flex;
   align-items: center;
+}
+
+.recent-business-indicator {
+  text-align: center;
+  margin-top: 1.5rem;
+}
+
+.recent-business-indicator span {
+  display: inline-block;
+  margin: 0 .125rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  background: #eee;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.recent-business-indicator span.active {
+  background: #225fac;
+}
+
+.carousel-container::-webkit-scrollbar {
+  display: none;
 }
 
 /* Recent business section end here */
