--- a/css/style.css
+++ b/css/style.css
@@ -361,4 +361,14 @@ svg {
     grid-template-columns: 1fr;
     gap: 81px;
   }
+
+  .carousel-container {
+    grid-auto-columns: calc((100% - 1.25rem) / 2);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .carousel-container {
+    grid-auto-columns: 100%;
+  }
 }
